---
source: tests/bundle.rs
expression: main
---
type Value__DARKLUA_TYPE_a = string

local __DARKLUA_BUNDLE_MODULES

__DARKLUA_BUNDLE_MODULES = {
    cache = {},
    load = function(m)
        if not __DARKLUA_BUNDLE_MODULES.cache[m] then
            __DARKLUA_BUNDLE_MODULES.cache[m] = {
                c = __DARKLUA_BUNDLE_MODULES[m](),
            }
        end

        return __DARKLUA_BUNDLE_MODULES.cache[m].c
    end,
}

do
    function __DARKLUA_BUNDLE_MODULES.a()
        return true
    end
end

local value = __DARKLUA_BUNDLE_MODULES.load('a')

export type Value = Value__DARKLUA_TYPE_a
